# one_brc_rs

./: .gitignore  .rustc_info.json  Cargo.toml  measure.sh
resources/: measurements_small.txt
src/: main.rs
