[package]
name = "one_brc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", features = ["small_rng"] }
clap = { version = "4.4.18", features = ["derive"] }
fxhash = "0.2.1"
hashbrown = "0.14.3"
memchr = "2.7.1"

[profile.release]
debug = true